# django-rubble

./: .env.sample  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  manage.py  mkdocs.yml  objects.inv  pyproject.toml  pyrightconfig.json  ruff.toml  tox.ini
.github/workflows/: publish.yml
changelog/: index.html
checks/errors/: index.html
checks/messages/: index.html
contributing/: index.html
django_rubble/: __init__.py  apps.py  cli.py  widgets.py
django_rubble/admin/: __init__.py  history_admin.py  number_admin.py  stamped_admin.py
django_rubble/checks/: messages.py
django_rubble/context/: __init__.py  sites.py
django_rubble/fields/: db_fields.py  test_db_fields.py  test_fields.py
django_rubble/forms/: db_forms.py
django_rubble/migrations/: 0001_initial.py
django_rubble/models/: __init__.py  factories.py  history_models.py  number_models.py  stamped_models.py
django_rubble/secrets/: __init__.py  env.py  infisical.py  utilities.py
django_rubble/utils/: default_funcs.py  enums.py  model_helpers.py  numbers.py  numeric_utils.py  strings.py  test_numbers.py  test_numeric_utils.py  test_strings.py
django_rubble/views/: create_views.py
django_utils/: apps.py
django_utils/admin/: stamped_admin.py
django_utils/fields/: auto_fields.py  db_fields.py
django_utils/forms/: db_forms.py
django_utils/models/: stamped_models.py
django_utils/utils/: default_funcs.py  numbers.py  strings.py
docs/: index.md
docs/checks/: errors.md  messages.md
docs/fields/: db_fields.md
docs/models/: history_models.md  number_models.md
docs/utils/: default_funcs.md  enums.md  model_helpers.md  numbers.md  numeric_utils.md  strings.md
fields/db_fields/: index.html
models/number_models/: index.html
scripts/: extract_ruff.py  gen_ref_pages.py  ruff_rule_models.py
search/: search_index.json
test/: settings.py
tests/: smoke_test.py
typings/simple_history/: __init__.pyi  admin.pyi  exceptions.pyi  manager.pyi  middleware.pyi  models.pyi  signals.pyi  template_utils.pyi  utils.pyi
utils/default_funcs/: index.html
utils/enums/: index.html
utils/model_helpers/: index.html
utils/numbers/: index.html
utils/strings/: index.html
