[project]
name = "django-rubble"
# version = "0.7.0b6"
description = "Extend django-model-utils and django-extensions."
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = "MIT"
authors = [{ name = "Karl Wooster", email = "karl@woostertech.com" }]
keywords = [
  "django",
  "django-extensions",
  "django-model-utils",
]
# classifiers = [
#   "Framework :: Django :: 4",
#   "Framework :: Django :: 4.0",
#   "Framework :: Django :: 4.1",
#   "Framework :: Django :: 4.2",
#   "Framework :: Django :: 5.0",
#   "Framework :: Django :: 5.1",
# ]
dependencies = [
  "case-converter (>=1.2.0,<2.0.0)",
  "croniter (>=3.0)",
  "django-model-utils (>=4.5)",
  "django (>4,<5.3)",
  "furl (>=2.1.3,<3.0.0)",
  "levenshtein (>=0.26.1,<0.27.0)",
  "loguru (>=0.7)",
  "pydantic-settings (>=2.7)",
  "pydantic (>=2.7)",
  "toml (>=0.10.2,<0.11.0)",
  "typing-extensions (>=4.5) ; python_version < '3.12'",
  "attrmagic>=0.2.0",
]
dynamic = ["classifiers", "version"]

[project.urls]
changelog = "https://github.com/WoosterTech/django-rubble/blob/main/CHANGELOG.md"
documentation = "https://woostertech.github.io/django-rubble/"
issues = "https://github.com/WoosterTech/django-rubble/issues"
source = "https://github.com/WoosterTech/django-rubble/"

[project.scripts]
rubble = "django_rubble.cli:app"

[project.optional-dependencies]
all = [
  "neapolitan (>=24.6)",
  "django-simple-history (>=3.7)",
  "infisical-python (>=2.3.5)",
  "typer (>=0.12)",
  "rich (>=13.7)",
]
cli = [
  "typer (>=0.12)",
  "rich (>=13.7)",
]
history = ["django-simple-history (>=3.7)"]
neapolitan = ["neapolitan (>=24.6)"]
secrets = ["infisical-python (>=2.3.5)"]

[dependency-groups]
dev = [
  "basedpyright>=1.33.0",
  "commitizen>=3.27.0,<4",
  "deptry>=0.23.0,<0.24",
  "django-types>=0.22.0",
  "pre-commit>=3.7.1,<4",
  "rich>=14.2.0",
  "types-toml>=0.10.8.20240310,<0.11",
]
docs = [
  "griffe-fieldz>=0.2.0,<0.3",
  "mkdocs>=1.6.1,<2",
  "mkdocs-gen-files>=0.5.0,<0.6",
  "mkdocs-include-markdown-plugin>=6.2.2,<7",
  "mkdocs-literate-nav>=0.6.1,<0.7",
  "mkdocs-material>=9.5.33,<10",
  "mkdocs-section-index>=0.3.9,<0.4",
  "mkdocstrings[python]>=0.25.2,<0.26",
]
test = [
  "factory-boy>=3.3.1,<4",
  "pytest>=8.2.1,<9",
  "pytest-cov>=7,<8",
  "pytest-django>=4.8.0,<5",
  "pytest-sugar>=1.0.0,<2",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "scm"
update_changelog_on_bump = true
major_version_zero = true

[tool.deptry]
extend_exclude = [".*/test_.*.py", ".*/factories.py"]

[tool.deptry.per_rule_ignores]
DEP004 = ["mkdocs_gen_files"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.hooks.version]
path = "django_rubble/_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build.targets.wheel]
packages = ["django_rubble"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "test.settings"

[tool.uv]
default-groups = [
  "dev",
  "test",
  "docs",
]

[tool.uv-dynamic-versioning]
bump = true
vcs = "git"
style = "pep440"
pattern = "default-unprefixed"
